--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,9 +4,8 @@
     <title>Spring Security Example</title>
 </head>
 <body>
-<h3>Index pravi</h3>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out"/>
-</form>
+<h1>Welcome!</h1>
+
+<p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
 </body>
 </html>
