--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,6 +25,7 @@
     <div ng-controller="homeController">
         {{name}}
     </div>
+    test master branch github
     <p>Click <a href="/home">here</a> to see a greeting.</p>
 </div>
 
