reset password via mail

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,11 +17,11 @@
     <div><input type="submit" value="Sign In"/></div>
 </form>
 <a th:href="@{/register}">Registracija</a>
-<!--<h1>Reset password:</h1>-->
-<!--<form th:action="@{/user/resetPassword}" method="post">-->
-    <!--<div><label> Email <input type="text" name="email"/> </label></div>-->
-    <!--&lt;!&ndash;<div><label> Password: <input type="password" name="password"/> </label></div>&ndash;&gt;-->
-    <!--<div><input type="submit" value="Reset"/></div>-->
-<!--</form>-->
+<h1>Reset password:</h1>
+<form th:action="@{/user/resetPassword}" method="post">
+    <div><label> Email <input type="text" name="email"/> </label></div>
+    <!--<div><label> Password: <input type="password" name="password"/> </label></div>-->
+    <div><input type="submit" value="Reset"/></div>
+</form>
 </body>
 </html>
