--- a/src/main/resources/static/js/app/admin/views/administracijaKorisnika.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaKorisnika.html
@@ -1,13 +1,43 @@
 <div ng-controller="administracijaController">
-    {{name}}
-    <div>
-        <table ng-table="tableParams" class="table" show-filter="true">
-            <tr ng-repeat="user in $data">
-                <td title="'Name'" filter="{ name: 'text'}" sortable="'name'">
-                    {{user.name}}</td>
-                <td title="'Age'" filter="{ age: 'number'}" sortable="'age'">
-                    {{user.age}}</td>
-            </tr>
+    <!--{{name}}-->
+    <!--<pre>administracija korisnika view</pre>-->
+    <div class="col-lg-12 col-sm-12 col-md-12">
+        <table class="table table-striped">
+            <thead>
+                <th>email</th>
+                <th>ime</th>
+                <th>prezime</th>
+                <th>username</th>
+                <th>datumRodjenja</th>
+                <th>jmbg</th>
+                <th>mjestoRodjenja</th>
+                <th>enabled</th>
+            <th>buttons</th>
+            </thead>
+            <tbody>
+                <tr ng-repeat="row in displayed">
+                    <td>{{row.email}}</td>
+                    <td>{{row.ime}}</td>
+                    <td>{{row.prezime}}</td>
+                    <td>{{row.username}}</td>
+                    <td>{{row.datumRodjenja}}</td>
+                    <td>{{row.jmbg}}</td>
+                    <td>{{row.mjestoRodjenja}}</td>
+                    <td>{{row.enabled}}</td>
+                    <td><button ng-click="detalji(row.username)">details</button><button ng-click="alert('hahaha')">delete</button></td>
+                </tr>
+            </tbody>
+            <tfoot>
+
+            </tfoot>
         </table>
+        <uib-pagination total-items="page.totalElements"
+                        ng-model="bigCurrentPage"
+                        ng-change="dajStranicu()"
+                        items-per-page="page.size"
+                        class="pagination-sm"
+                        boundary-links="true"
+                        force-ellipses="true">
+        </uib-pagination>
     </div>
 </div>
