--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
 </form>
 <a th:href="@{/register}">Registracija</a>
 <h1>Reset password:</h1>
-<form th:action="@{/user/resetPassword}" method="post">
+<form th:action="@{/resetPassword}" method="post">
     <div><label> Email <input type="text" name="email"/> </label></div>
     <!--<div><label> Password: <input type="password" name="password"/> </label></div>-->
     <div><input type="submit" value="Reset"/></div>
