--- a/src/main/resources/static/js/app/admin/views/administracijaKorisnika.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaKorisnika.html
@@ -1,9 +1,10 @@
-<div ng-controller="administracijaController">
+<div ng-controller="administracijaKorisnikaController">
     <!--{{name}}-->
     <!--<pre>administracija korisnika view</pre>-->
-    <div class="col-lg-12 col-sm-12 col-md-12">
-        <table class="table table-striped">
-            <thead>
+    <div class="row">
+        <div class="col-lg-12 col-sm-12 col-md-12">
+            <table class="table table-striped">
+                <thead>
                 <th>email</th>
                 <th>ime</th>
                 <th>prezime</th>
@@ -12,9 +13,9 @@
                 <th>jmbg</th>
                 <th>mjestoRodjenja</th>
                 <th>enabled</th>
-            <th>buttons</th>
-            </thead>
-            <tbody>
+                <th>buttons</th>
+                </thead>
+                <tbody>
                 <tr ng-repeat="row in displayed">
                     <td>{{row.email}}</td>
                     <td>{{row.ime}}</td>
@@ -24,20 +25,22 @@
                     <td>{{row.jmbg}}</td>
                     <td>{{row.mjestoRodjenja}}</td>
                     <td>{{row.enabled}}</td>
-                    <td><button ng-click="detalji(row.username)">details</button><button ng-click="alert('hahaha')">delete</button></td>
+                    <td><button ng-click="detalji(row.username)">details</button><button ng-click="dummy">delete</button></td>
                 </tr>
-            </tbody>
-            <tfoot>
+                </tbody>
+                <tfoot>
 
-            </tfoot>
-        </table>
-        <uib-pagination total-items="page.totalElements"
-                        ng-model="bigCurrentPage"
-                        ng-change="dajStranicu()"
-                        items-per-page="page.size"
-                        class="pagination-sm"
-                        boundary-links="true"
-                        force-ellipses="true">
-        </uib-pagination>
+                </tfoot>
+            </table>
+            <uib-pagination total-items="page.totalElements"
+                            ng-model="bigCurrentPage"
+                            ng-change="dajStranicu()"
+                            items-per-page="page.size"
+                            class="pagination-sm"
+                            boundary-links="true"
+                            force-ellipses="true">
+            </uib-pagination>
+        </div>
     </div>
+
 </div>
