--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,6 +17,7 @@
     <div><input type="submit" value="Sign In"/></div>
 </form>
 <a th:href="@{/register}">Registracija</a>
+<a href="#/registracija">Registracija angular</a>
 <h1>Reset password:</h1>
 <form th:action="@{/resetPassword}" method="post">
     <div><label> Email <input type="text" name="email"/> </label></div>
