--- a/src/main/resources/static/js/app/admin/views/administracijaUloga.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaUloga.html
@@ -1,44 +1,97 @@
-<div ng-controller="administracijaUlogaController">
-    <!--{{name}}-->
-    <!--<pre>administracija korisnika view</pre>-->
-    <div class="row">
-        <div class="col-lg-12 col-sm-12 col-md-12">
-            <table class="table table-striped">
-                <thead>
-                <th>naziv</th>
-                <th>korisnici</th>
-                <th>akcije</th>
-                <th>button</th>
+<md-content layout="column" flex ng-controller="administracijaUlogaController">
+    <md-card>
+        <md-toolbar class="md-table-toolbar md-default"
+                    ng-hide="options.rowSelection && selected.length">
+            <div class="md-toolbar-tools">
+                <h2 flex="">Uloge</h2>
+                <md-button class="md-icon-button">
+                    <ng-md-icon icon="add" ng-click="dummy()"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
+                <md-button class="md-icon-button">
+                    <ng-md-icon icon="cached" ng-click="loadStuff()"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
+            </div>
+        </md-toolbar>
+
+        <md-toolbar class="md-table-toolbar alternate"
+                    ng-show="options.rowSelection && selected.length">
+            <div class="md-toolbar-tools">
+                <span flex="">{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>
+                <md-button class="md-icon-button">
+                    <md-tooltip>Edit</md-tooltip>
+                    <ng-md-icon icon="edit"
+                                ng-click="dummy()"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
+                <md-button class="md-icon-button">
+                    <md-tooltip>Delete</md-tooltip>
+                    <ng-md-icon icon="delete"
+                                ng-click="delete()"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
+            </div>
+        </md-toolbar>
+
+        <md-table-container>
+            <table md-table
+                   md-row-select="options.rowSelection"
+                   multiple="{{options.multiSelect}}"
+                   ng-model="selected"
+                   md-progress="promise">
+                <thead ng-if="!options.decapitate" md-head
+                       md-order="query.order" md-on-reorder="logOrder">
+                <tr md-row>
+                    <th md-column>naziv</th>
+                    <th md-column="">akcije</th>
+                    <th md-column="">korisnici</th>
+                    <th md-column>Dugmici</th>
+                </tr>
                 </thead>
-                <tbody>
-                <tr ng-repeat="row in displayed">
-                    <td>{{row.naziv}}</td>
-                    <td>{{displaySet(row.korisnikSet)}}</td>
-                    <td>{{displaySet(row.akcijaSet)}}</td>
-                    <td>
-                        <!--<button ng-click="detalji(row.username)">details</button>-->
-                        <button ng-click="delete(row,row.naziv)">delete</button></td>
+                <tbody md-body>
+                <tr md-row
+                    md-select="item"
+                    md-on-select="logItem"
+                    md-auto-select="options.autoSelect"
+                    ng-repeat="item in query.data">
+                    <td md-cell>{{item.naziv}}</td>
+                    <td md-cell>{{displaySet(item.akcijaSet)}}</td>
+                    <td md-cell>{{displaySet(item.korisnikSet)}}</td>
+                    <td md-cell>
+                        <md-button class="md-icon-button">
+                            <md-tooltip>Open</md-tooltip>
+                            <ng-md-icon icon="open_in_browser"
+                                        ng-click="dummy()"
+                                        style="fill: black">
+                            </ng-md-icon>
+                        </md-button>
+                        <!--<md-button class="md-icon-button">-->
+                        <!--<md-tooltip>Edit</md-tooltip>-->
+                        <!--<ng-md-icon icon="edit"-->
+                        <!--ng-click="dummy()"-->
+                        <!--style="fill: black"></ng-md-icon>-->
+                        <!--</md-button>-->
+                        <!--<md-button class="md-icon-button">-->
+                        <!--<md-tooltip>Reset password</md-tooltip>-->
+                        <!--<ng-md-icon icon="mail"-->
+                        <!--ng-click="dummy()"-->
+                        <!--style="fill: black">-->
+                        <!--</ng-md-icon>-->
+                        <!--</md-button>-->
+                    </td>
                 </tr>
                 </tbody>
-                <tfoot>
-
-                </tfoot>
             </table>
-            <uib-pagination total-items="page.totalElements"
-                            ng-model="bigCurrentPage"
-                            ng-change="dajStranicu()"
-                            items-per-page="page.size"
-                            class="pagination-sm"
-                            boundary-links="true"
-                            force-ellipses="true">
-            </uib-pagination>
-        </div>
-        <button ng-click="dodajUloga()">test</button>
-        <button ng-click="dodaj()">test2</button>
-        <button ng-click="dodaj2()">test3</button>
-        <button ng-click="dodaj3()">testp</button>
-        <pre>{{items}}</pre>
-        <pre>{{ppl}}</pre>
-    </div>
+        </md-table-container>
 
-</div>
+
+        <md-table-pagination md-limit="query.limit"
+                             md-limit-options="limitOptions"
+                             md-page="query.page"
+                             md-total="{{query.totalElements}}"
+                             md-page-select="options.pageSelect"
+                             md-boundary-links="options.boundaryLinks"
+                             md-on-paginate="logPagination"></md-table-pagination>
+    </md-card>
+</md-content>
