--- a/src/main/resources/static/js/app/admin/views/administracijaUloga.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaUloga.html
@@ -1,31 +1,19 @@
-<md-content layout="column" flex ng-controller="administracijaUlogaController">
+<md-content layout="row" flex ng-controller="administracijaUlogaController">
     <md-card>
-        <md-toolbar class="md-table-toolbar md-default"
-                    ng-hide="options.rowSelection && selected.length">
+        <md-toolbar class="md-table-toolbar md-default">
             <div class="md-toolbar-tools">
-                <h2 flex="">Uloge</h2>
+                <h2 >Uloge</h2>
+                <span flex=""></span>
                 <md-button class="md-icon-button">
-                    <ng-md-icon icon="add" ng-click="dummy()"
+                    <ng-md-icon icon="add" ng-click="newDialog($event)"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
                 <md-button class="md-icon-button">
-                    <ng-md-icon icon="cached" ng-click="loadStuff()"
+                    <ng-md-icon icon="cached" ng-click="loadStuffUloga()"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
-            </div>
-        </md-toolbar>
-
-        <md-toolbar class="md-table-toolbar alternate"
-                    ng-show="options.rowSelection && selected.length">
-            <div class="md-toolbar-tools">
-                <span flex="">{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>
-                <md-button class="md-icon-button">
-                    <md-tooltip>Edit</md-tooltip>
-                    <ng-md-icon icon="edit"
-                                ng-click="dummy()"
-                                style="fill: black"></ng-md-icon>
-                </md-button>
-                <md-button class="md-icon-button">
+                <md-button class="md-icon-button"
+                           ng-show="options.rowSelection && selected.length">
                     <md-tooltip>Delete</md-tooltip>
                     <ng-md-icon icon="delete"
                                 ng-click="delete()"
@@ -33,6 +21,25 @@
                 </md-button>
             </div>
         </md-toolbar>
+
+        <!--<md-toolbar class="md-table-toolbar alternate"-->
+                    <!--ng-show="options.rowSelection && selected.length">-->
+            <!--<div class="md-toolbar-tools">-->
+                <!--<span flex="">{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>-->
+                <!--<md-button class="md-icon-button">-->
+                    <!--<md-tooltip>Edit</md-tooltip>-->
+                    <!--<ng-md-icon icon="edit"-->
+                                <!--ng-click="dummy()"-->
+                                <!--style="fill: black"></ng-md-icon>-->
+                <!--</md-button>-->
+                <!--<md-button class="md-icon-button">-->
+                    <!--<md-tooltip>Delete</md-tooltip>-->
+                    <!--<ng-md-icon icon="delete"-->
+                                <!--ng-click="delete()"-->
+                                <!--style="fill: black"></ng-md-icon>-->
+                <!--</md-button>-->
+            <!--</div>-->
+        <!--</md-toolbar>-->
 
         <md-table-container>
             <table md-table
@@ -46,7 +53,7 @@
                     <th md-column>naziv</th>
                     <th md-column="">akcije</th>
                     <th md-column="">korisnici</th>
-                    <th md-column>Dugmici</th>
+                    <!--<th md-column>Dugmici</th>-->
                 </tr>
                 </thead>
                 <tbody md-body>
@@ -58,28 +65,28 @@
                     <td md-cell>{{item.naziv}}</td>
                     <td md-cell>{{displaySet(item.akcijaSet)}}</td>
                     <td md-cell>{{displaySet(item.korisnikSet)}}</td>
-                    <td md-cell>
-                        <md-button class="md-icon-button">
-                            <md-tooltip>Open</md-tooltip>
-                            <ng-md-icon icon="open_in_browser"
-                                        ng-click="dummy()"
-                                        style="fill: black">
-                            </ng-md-icon>
-                        </md-button>
+                    <!--<td md-cell>-->
                         <!--<md-button class="md-icon-button">-->
-                        <!--<md-tooltip>Edit</md-tooltip>-->
-                        <!--<ng-md-icon icon="edit"-->
-                        <!--ng-click="dummy()"-->
-                        <!--style="fill: black"></ng-md-icon>-->
+                            <!--<md-tooltip>Open</md-tooltip>-->
+                            <!--<ng-md-icon icon="open_in_browser"-->
+                                        <!--ng-click="dummy()"-->
+                                        <!--style="fill: black">-->
+                            <!--</ng-md-icon>-->
                         <!--</md-button>-->
-                        <!--<md-button class="md-icon-button">-->
-                        <!--<md-tooltip>Reset password</md-tooltip>-->
-                        <!--<ng-md-icon icon="mail"-->
-                        <!--ng-click="dummy()"-->
-                        <!--style="fill: black">-->
-                        <!--</ng-md-icon>-->
-                        <!--</md-button>-->
-                    </td>
+                        <!--&lt;!&ndash;<md-button class="md-icon-button">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<md-tooltip>Edit</md-tooltip>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<ng-md-icon icon="edit"&ndash;&gt;-->
+                        <!--&lt;!&ndash;ng-click="dummy()"&ndash;&gt;-->
+                        <!--&lt;!&ndash;style="fill: black"></ng-md-icon>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</md-button>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<md-button class="md-icon-button">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<md-tooltip>Reset password</md-tooltip>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<ng-md-icon icon="mail"&ndash;&gt;-->
+                        <!--&lt;!&ndash;ng-click="dummy()"&ndash;&gt;-->
+                        <!--&lt;!&ndash;style="fill: black">&ndash;&gt;-->
+                        <!--&lt;!&ndash;</ng-md-icon>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</md-button>&ndash;&gt;-->
+                    <!--</td>-->
                 </tr>
                 </tbody>
             </table>
@@ -87,11 +94,194 @@
 
 
         <md-table-pagination md-limit="query.limit"
-                             md-limit-options="limitOptions"
                              md-page="query.page"
                              md-total="{{query.totalElements}}"
                              md-page-select="options.pageSelect"
                              md-boundary-links="options.boundaryLinks"
-                             md-on-paginate="logPagination"></md-table-pagination>
+                             md-on-paginate="logPaginationUloga"></md-table-pagination>
     </md-card>
+    <md-card ng-show="selected.length">
+        <md-card-header>
+            <md-card-avatar>
+                <ng-md-icon icon="edit" style="fill:black"/>
+            </md-card-avatar>
+            <md-card-header-text>
+                <span class="md-title">{{selected[0].naziv}}</span>
+            </md-card-header-text>
+        </md-card-header>
+        <md-tabs md-dynamic-height
+                 md-border-bottom>
+            <md-tab label="akcije">
+                <button ng-click="saveAkcije()">save</button>
+                <md-table-container>
+                    <table md-table
+                           md-row-select="true"
+                           multiple="true"
+                           ng-model="selectedAkcije"
+                           md-progress="promiseAkcije">
+                        <thead ng-if="!options.decapitate" md-head
+                               md-order="queryAkcije.order" md-on-reorder="logOrder">
+                        <tr md-row>
+                            <!--<th md-column>check</th>-->
+                            <th md-column="">naziv akcije</th>
+                        </tr>
+                        </thead>
+                        <tbody md-body>
+                        <tr md-row
+                            md-select="item"
+                            md-on-select="selectAkcije"
+                            md-auto-select="true"
+                            ng-repeat="item in queryAkcije.data">
+                            <!--<td md-cell>check</td>-->
+                            <td md-cell>{{item.naziv}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </md-table-container>
+                <md-table-pagination md-limit="queryAkcije.limit"
+                                     md-page="queryAkcije.page"
+                                     md-total="{{queryAkcije.totalElements}}"
+                                     md-page-select="false"
+                                     md-boundary-links="options.boundaryLinks"
+                                     md-on-paginate="paginationAkcije"></md-table-pagination>
+
+            </md-tab>
+            <md-tab label="korisnici">
+                <md-table-container>
+                    <table md-table
+                           md-row-select="true"
+                           multiple="true"
+                           ng-model="selectedKorisnici"
+                           md-progress="promiseKorisnici">
+                        <thead ng-if="!options.decapitate" md-head
+                               md-order="queryKorisnici.order" md-on-reorder="logOrder">
+                        <tr md-row>
+                            <!--<th md-column>check</th>-->
+                            <th md-column="">username</th>
+                            <th md-column="">ime</th>
+                            <th md-column="">prezime</th>
+                            <th md-column="">enabled</th>
+                        </tr>
+                        </thead>
+                        <tbody md-body>
+                        <tr md-row
+                            md-select="item"
+                            md-auto-select="true"
+                            ng-repeat="item in queryKorisnici.data">
+                            <!--<td md-cell>check</td>-->
+                            <td md-cell>{{item.username}}</td>
+                            <td md-cell>{{item.ime}}</td>
+                            <td md-cell>{{item.prezime}}</td>
+                            <td md-cell>{{item.enabled}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </md-table-container>
+                <md-table-pagination md-limit="queryKorisnici.limit"
+                                     md-limit-options="limitOptions"
+                                     md-page="queryKorisnici.page"
+                                     md-total="{{queryKorisnici.totalElements}}"
+                                     md-page-select="options.pageSelect"
+                                     md-boundary-links="options.boundaryLinks"
+                                     md-on-paginate="paginationKorisnici"></md-table-pagination>
+
+            </md-tab>
+        </md-tabs>
+        <!--<md-toolbar class="md-table-toolbar md-default"-->
+                    <!--ng-hide="options.rowSelection && selected.length">-->
+            <!--<div class="md-toolbar-tools">-->
+                <!--<h2 >Uloge</h2>-->
+                <!--<span flex=""></span>-->
+                <!--<md-button class="md-icon-button">-->
+                    <!--<ng-md-icon icon="add" ng-click="newDialog($event)"-->
+                                <!--style="fill: black"></ng-md-icon>-->
+                <!--</md-button>-->
+                <!--<md-button class="md-icon-button">-->
+                    <!--<ng-md-icon icon="cached" ng-click="loadStuff()"-->
+                                <!--style="fill: black"></ng-md-icon>-->
+                <!--</md-button>-->
+            <!--</div>-->
+        <!--</md-toolbar>-->
+
+        <!--<md-toolbar class="md-table-toolbar alternate"-->
+                    <!--ng-show="options.rowSelection && selected.length">-->
+            <!--<div class="md-toolbar-tools">-->
+                <!--<span flex="">{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>-->
+                <!--<md-button class="md-icon-button">-->
+                    <!--<md-tooltip>Edit</md-tooltip>-->
+                    <!--<ng-md-icon icon="edit"-->
+                                <!--ng-click="dummy()"-->
+                                <!--style="fill: black"></ng-md-icon>-->
+                <!--</md-button>-->
+                <!--<md-button class="md-icon-button">-->
+                    <!--<md-tooltip>Delete</md-tooltip>-->
+                    <!--<ng-md-icon icon="delete"-->
+                                <!--ng-click="delete()"-->
+                                <!--style="fill: black"></ng-md-icon>-->
+                <!--</md-button>-->
+            <!--</div>-->
+        <!--</md-toolbar>-->
+
+        <!--<md-table-container>-->
+            <!--<table md-table-->
+                   <!--md-row-select="options.rowSelection"-->
+                   <!--multiple="{{options.multiSelect}}"-->
+                   <!--ng-model="selected"-->
+                   <!--md-progress="promise">-->
+                <!--<thead ng-if="!options.decapitate" md-head-->
+                       <!--md-order="query.order" md-on-reorder="logOrder">-->
+                <!--<tr md-row>-->
+                    <!--<th md-column>naziv</th>-->
+                    <!--<th md-column="">akcije</th>-->
+                    <!--<th md-column="">korisnici</th>-->
+                    <!--<th md-column>Dugmici</th>-->
+                <!--</tr>-->
+                <!--</thead>-->
+                <!--<tbody md-body>-->
+                <!--<tr md-row-->
+                    <!--md-select="item"-->
+                    <!--md-on-select="logItem"-->
+                    <!--md-auto-select="options.autoSelect"-->
+                    <!--ng-repeat="item in query.data">-->
+                    <!--<td md-cell>{{item.naziv}}</td>-->
+                    <!--<td md-cell>{{displaySet(item.akcijaSet)}}</td>-->
+                    <!--<td md-cell>{{displaySet(item.korisnikSet)}}</td>-->
+                    <!--<td md-cell>-->
+                        <!--<md-button class="md-icon-button">-->
+                            <!--<md-tooltip>Open</md-tooltip>-->
+                            <!--<ng-md-icon icon="open_in_browser"-->
+                                        <!--ng-click="dummy()"-->
+                                        <!--style="fill: black">-->
+                            <!--</ng-md-icon>-->
+                        <!--</md-button>-->
+                        <!--&lt;!&ndash;<md-button class="md-icon-button">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<md-tooltip>Edit</md-tooltip>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<ng-md-icon icon="edit"&ndash;&gt;-->
+                        <!--&lt;!&ndash;ng-click="dummy()"&ndash;&gt;-->
+                        <!--&lt;!&ndash;style="fill: black"></ng-md-icon>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</md-button>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<md-button class="md-icon-button">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<md-tooltip>Reset password</md-tooltip>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<ng-md-icon icon="mail"&ndash;&gt;-->
+                        <!--&lt;!&ndash;ng-click="dummy()"&ndash;&gt;-->
+                        <!--&lt;!&ndash;style="fill: black">&ndash;&gt;-->
+                        <!--&lt;!&ndash;</ng-md-icon>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</md-button>&ndash;&gt;-->
+                    <!--</td>-->
+                <!--</tr>-->
+                <!--</tbody>-->
+            <!--</table>-->
+        <!--</md-table-container>-->
+
+
+        <!--<md-table-pagination md-limit="query.limit"-->
+                             <!--md-limit-options="limitOptions"-->
+                             <!--md-page="query.page"-->
+                             <!--md-total="{{query.totalElements}}"-->
+                             <!--md-page-select="options.pageSelect"-->
+                             <!--md-boundary-links="options.boundaryLinks"-->
+                             <!--md-on-paginate="logPagination"></md-table-pagination>-->
+    </md-card>
+    <!--<pre>{{selectedAkcije}}</pre>-->
+    <!--<pre>{{queryAkcije}}</pre>-->
 </md-content>
