salje na mail token za promjenu password-a

--- a/src/main/resources/static/views/loginA.html
+++ b/src/main/resources/static/views/loginA.html
@@ -116,7 +116,7 @@
         <!--</md-card-header>-->
         <!-- Call a method in the scope of your controller to handle data submit -->
 
-        <form ng-submit="submit()" method="post" name="registracijaForm">
+        <form  name="registracijaForm">
             <md-content>
                 <div layout-gt-xs="row">
                     <md-input-container class="md-block">
