novi korisnik postavke

--- a/src/main/resources/static/js/app/admin/views/administracijaKorisnika.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaKorisnika.html
@@ -5,6 +5,10 @@
             <div class="md-toolbar-tools">
                 <h2 flex="">Korisnici</h2>
                 <md-button class="md-icon-button">
+                    <ng-md-icon icon="add" ng-click="newDialog($event)"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
+                <md-button class="md-icon-button">
                     <ng-md-icon icon="cached" ng-click="loadStuff()"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
