--- a/src/main/resources/static/js/app/admin/views/administracijaKorisnika.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaKorisnika.html
@@ -31,6 +31,11 @@
                                 ng-click="dummy()"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
+                <md-button class="md-icon-button">
+                    <md-tooltip><span translate="RESET_PASSWORD">Reset password</span></md-tooltip>
+                    <ng-md-icon icon="contact_mail" ng-click="resetPasswordMail()"
+                                style="fill: black" ></ng-md-icon>
+                </md-button>
             </div>
         </md-toolbar>
 
