--- a/src/main/resources/static/js/app/admin/views/administracijaNotifikacija.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaNotifikacija.html
@@ -15,24 +15,24 @@
             </div>
         </md-toolbar>
 
-        <!--<md-toolbar class="md-table-toolbar alternate"-->
-        <!--ng-show="options.rowSelection && selected.length">-->
-        <!--<div class="md-toolbar-tools">-->
-        <!--<span flex="">{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>-->
-        <!--<md-button class="md-icon-button">-->
-        <!--<md-tooltip>Edit</md-tooltip>-->
-        <!--<ng-md-icon icon="edit"-->
-        <!--ng-click="dummy()"-->
-        <!--style="fill: black"></ng-md-icon>-->
-        <!--</md-button>-->
-        <!--<md-button class="md-icon-button">-->
-        <!--<md-tooltip>Delete</md-tooltip>-->
-        <!--<ng-md-icon icon="delete"-->
-        <!--ng-click="dummy()"-->
-        <!--style="fill: black"></ng-md-icon>-->
-        <!--</md-button>-->
-        <!--</div>-->
-        <!--</md-toolbar>-->
+        <md-toolbar class="md-table-toolbar alternate"
+                    ng-show="options.rowSelection && selected.length">
+            <div class="md-toolbar-tools">
+                <span flex="">{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>
+                <md-button class="md-icon-button">
+                    <md-tooltip>Edit</md-tooltip>
+                    <ng-md-icon icon="edit"
+                                ng-click="dummy()"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
+                <md-button class="md-icon-button">
+                    <md-tooltip>Delete</md-tooltip>
+                    <ng-md-icon icon="delete"
+                                ng-click="deleteNotifikacije()"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
+            </div>
+        </md-toolbar>
 
         <md-table-container>
             <table md-table
@@ -44,7 +44,7 @@
                        md-order="query.order" md-on-reorder="logOrder">
                 <tr md-row>
                     <th md-column="">Tekst</th>
-                    <th md-column>Dugmici</th>
+                    <!--<th md-column>Dugmici</th>-->
                 </tr>
                 </thead>
                 <tbody md-body>
