--- a/src/main/resources/static/js/app/admin/views/administracijaStatusa.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaStatusa.html
@@ -12,27 +12,34 @@
                     <ng-md-icon icon="cached" ng-click="loadStuff()"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
+               <!-- <md-button class="md-icon-button"
+                           ng-show="options.rowSelection && selected.length">
+                    <md-tooltip>Delete</md-tooltip>
+                    <ng-md-icon icon="delete"
+                                ng-click="delete()"
+                                style="fill: black"></ng-md-icon>
+                </md-button> -->
             </div>
         </md-toolbar>
 
-        <!--<md-toolbar class="md-table-toolbar alternate"-->
-                    <!--ng-show="options.rowSelection && selected.length">-->
-            <!--<div class="md-toolbar-tools">-->
-                <!--<span flex="">{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>-->
-                <!--<md-button class="md-icon-button">-->
-                    <!--<md-tooltip>Edit</md-tooltip>-->
-                    <!--<ng-md-icon icon="edit"-->
-                                <!--ng-click="dummy()"-->
-                                <!--style="fill: black"></ng-md-icon>-->
-                <!--</md-button>-->
-                <!--<md-button class="md-icon-button">-->
-                    <!--<md-tooltip>Delete</md-tooltip>-->
-                    <!--<ng-md-icon icon="delete"-->
-                                <!--ng-click="dummy()"-->
-                                <!--style="fill: black"></ng-md-icon>-->
-                <!--</md-button>-->
-            <!--</div>-->
-        <!--</md-toolbar>-->
+        <md-toolbar class="md-table-toolbar alternate"
+                    ng-show="options.rowSelection && selected.length">
+            <div class="md-toolbar-tools">
+                <span flex="">{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>
+                <md-button class="md-icon-button">
+                    <md-tooltip>Edit</md-tooltip>
+                    <ng-md-icon icon="edit"
+                                ng-click="editDialog($event)"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
+                <md-button class="md-icon-button">
+                    <md-tooltip>Delete</md-tooltip>
+                    <ng-md-icon icon="delete"
+                                ng-click="deleteStatusa()"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
+            </div>
+        </md-toolbar>
 
         <md-table-container>
             <table md-table
@@ -45,7 +52,7 @@
                 <tr md-row>
                     <th md-column="">Naziv BA</th>
                     <th md-column="">Naziv EN</th>
-                    <th md-column>Dugmici</th>
+                    <!-- <th md-column>Dugmici</th> -->
                 </tr>
                 </thead>
                 <tbody md-body>
@@ -71,4 +78,19 @@
                              md-boundary-links="options.boundaryLinks"
                              md-on-paginate="logPagination"></md-table-pagination>
     </md-card>
+
+<!--    <md-card ng-show="selected.length">
+        <md-card-header>
+            <md-card-avatar>
+                <ng-md-icon icon="edit" style="fill:black"/>
+            </md-card-avatar>
+            <md-card-header-text>
+                <span class="md-title">{{selected[0].nazivba}}</span>
+            </md-card-header-text>
+            <span flex=""></span>
+
+        </md-card-header>
+
+    </md-card> -->
+
 </md-content>
