--- a/src/main/resources/static/js/app/admin/views/administracijaNotifikacija.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaNotifikacija.html
@@ -22,7 +22,7 @@
                 <md-button class="md-icon-button">
                     <md-tooltip>Edit</md-tooltip>
                     <ng-md-icon icon="edit"
-                                ng-click="dummy()"
+                                ng-click="editDialog($event)"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
                 <md-button class="md-icon-button">
