edit i delete komentara

--- a/src/main/resources/static/js/app/admin/views/administracijaKomentara.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaKomentara.html
@@ -47,7 +47,7 @@
                 <md-button class="md-icon-button">
                     <md-tooltip>Delete</md-tooltip>
                     <ng-md-icon icon="delete"
-                                ng-click="deleteKomentara()"
+                                ng-click="deleteKomentar()"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
             </div>
