relacija dokument add,edit, delete

--- a/src/main/resources/static/js/app/admin/views/administracijaRelacijaDokumenta.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaRelacijaDokumenta.html
@@ -34,6 +34,25 @@
         <!--</div>-->
         <!--</md-toolbar>-->
 
+        <md-toolbar class="md-table-toolbar alternate"
+                    ng-show="options.rowSelection && selected.length">
+            <div class="md-toolbar-tools">
+                <span flex="">{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>
+                <md-button class="md-icon-button">
+                    <md-tooltip>Edit</md-tooltip>
+                    <ng-md-icon icon="edit"
+                                ng-click="editDialog($event)"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
+                <md-button class="md-icon-button">
+                    <md-tooltip>Delete</md-tooltip>
+                    <ng-md-icon icon="delete"
+                                ng-click="deleteRelacijaDokument()"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
+            </div>
+        </md-toolbar>
+
         <md-table-container>
             <table md-table
                    md-row-select="options.rowSelection"
