sredjen edit; ispravke

--- a/src/main/resources/static/js/app/admin/views/administracijaRelacijaKorisnik.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaRelacijaKorisnik.html
@@ -3,7 +3,7 @@
         <md-toolbar class="md-table-toolbar md-default"
                     ng-hide="options.rowSelection && selected.length">
             <div class="md-toolbar-tools">
-                <h2 flex="">Statusi</h2>
+                <h2 flex="">Relacija korisnik</h2>
                 <md-button class="md-icon-button">
                     <ng-md-icon icon="add" ng-click="newDialog($event)"
                                 style="fill: black"></ng-md-icon>
