--- a/src/main/resources/static/js/app/admin/views/administracijaDokumenta.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaDokumenta.html
@@ -3,7 +3,7 @@
         <md-toolbar class="md-table-toolbar md-default"
                     ng-hide="options.rowSelection && selected.length">
             <div class="md-toolbar-tools">
-                <h2 flex="">Dokumenti</h2>
+                <h2 flex="" translate="DOCUMENTS">Dokumenti</h2>
                 <md-button class="md-icon-button">
                     <ng-md-icon icon="add" ng-click="newDialog($event)"
                                 style="fill: black"></ng-md-icon>
@@ -62,10 +62,10 @@
                 <thead ng-if="!options.decapitate" md-head
                        md-order="query.order" md-on-reorder="logOrder">
                 <tr md-row>
-                    <th md-column="" >Azuriran</th>
+                    <th md-column="" ><span translate="DOCUMENT.UPDATED"> Azuriran</span></th>
                     <th md-column="" > <span translate="DOCUMENT.EXPIRES">Istice</span></th>
                     <th md-column="" ><span translate="DOCUMENT.CREATED">Kreiran</span></th>
-                    <th md-column="" >Oznaka</th>
+                    <th md-column="" ><span translate="DOCUMENT.NAME"> Oznaka</span></th>
                     <th md-column="" ><span translate="DOCUMENT.SIGNATURE">Potpis</span></th>
                     <th md-column="" ><span translate="DOCUMENT.SIGNED">Potpisan</span></th>
                     <th md-column=""><span translate="DOCUMENT.TEXT">Tekst</span></th>
