--- a/src/main/resources/static/js/app/admin/views/administracijaRelacijaDokumenta.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaRelacijaDokumenta.html
@@ -47,7 +47,7 @@
                 <md-button class="md-icon-button">
                     <md-tooltip><span translate="IZBOR.DELETE"> Delete</span></md-tooltip>
                     <ng-md-icon icon="delete"
-                                ng-click="deleteRelacijaDokument()"
+                                ng-click="deleteStatusa()"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
             </div>
