--- a/src/main/resources/static/js/app/admin/views/administracijaDogadjaja.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaDogadjaja.html
@@ -3,7 +3,7 @@
         <md-toolbar class="md-table-toolbar md-default"
                     ng-hide="options.rowSelection && selected.length">
             <div class="md-toolbar-tools">
-                <h2 flex="" translate="EVENTS">Dogadjaji</h2>
+                <h2 flex="" translate="EVENTS">Događaji</h2>
                 <md-button class="md-icon-button">
                     <ng-md-icon icon="add" ng-click="newDialog($event)"
                                 style="fill: black"></ng-md-icon>
