--- a/src/main/resources/static/js/app/admin/views/administracijaDokumenta.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaDokumenta.html
@@ -39,13 +39,13 @@
             <div class="md-toolbar-tools">
                 <span flex="">{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>
                 <md-button class="md-icon-button">
-                    <md-tooltip><span translate="EDIT"></span>Edit</md-tooltip>
+                    <md-tooltip><span translate="IZBOR.EDIT"> Edit</span></md-tooltip>
                     <ng-md-icon icon="edit"
                                 ng-click="editDialog($event)"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
                 <md-button class="md-icon-button">
-                    <md-tooltip><span translate="DELETE"></span>Delete</md-tooltip>
+                    <md-tooltip><span translate="IZBOR.DELETE"> Delete</span></md-tooltip>
                     <ng-md-icon icon="delete"
                                 ng-click="deleteDokument()"
                                 style="fill: black"></ng-md-icon>
