--- a/src/main/resources/static/js/app/admin/views/administracijaUloga.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaUloga.html
@@ -2,7 +2,7 @@
     <md-card>
         <md-toolbar class="md-table-toolbar md-default">
             <div class="md-toolbar-tools">
-                <h2 >Uloge</h2>
+                <h2 translate="ROLES">Uloge</h2>
                 <span flex=""></span>
                 <md-button class="md-icon-button">
                     <ng-md-icon icon="add" ng-click="newDialog($event)"
@@ -14,7 +14,7 @@
                 </md-button>
                 <md-button class="md-icon-button"
                            ng-show="options.rowSelection && selected.length">
-                    <md-tooltip>Delete</md-tooltip>
+                    <md-tooltip><span translate="IZBOR.DELETE"> Delete</span></md-tooltip>
                     <ng-md-icon icon="delete"
                                 ng-click="delete()"
                                 style="fill: black"></ng-md-icon>
@@ -50,9 +50,9 @@
                 <thead ng-if="!options.decapitate" md-head
                        md-order="query.order" md-on-reorder="logOrder">
                 <tr md-row>
-                    <th md-column>naziv</th>
-                    <th md-column="">akcije</th>
-                    <th md-column="">korisnici</th>
+                    <th md-column><span translate="ROLE.NAME"> Naziv</span></th>
+                    <th md-column=""><span translate="ROLE.ACTIONS"> Akcije</span></th>
+                    <th md-column=""><span translate="ROLE.USERS"> Korisnici</span></th>
                     <!--<th md-column>Dugmici</th>-->
                 </tr>
                 </thead>
@@ -103,7 +103,12 @@
     <md-card ng-show="selected.length">
         <md-card-header>
             <md-card-avatar>
-                <ng-md-icon icon="edit" style="fill:black"/>
+                <md-button class="md-icon-button">
+                    <md-tooltip><span translate="IZBOR.EDIT"> Edit</span></md-tooltip>
+                    <ng-md-icon icon="edit"
+                                ng-click="editDialog($event)"
+                                style="fill: black"></ng-md-icon>
+                </md-button>
             </md-card-avatar>
             <md-card-header-text>
                 <span class="md-title">{{selected[0].naziv}}</span>
@@ -121,7 +126,7 @@
         </md-card-header>
         <md-tabs md-dynamic-height
                  md-border-bottom>
-            <md-tab label="akcije">
+            <md-tab label="{{'ROLE.ACTIONS' | translate}}">
                 <!--<button ng-click="saveAkcije()">save</button>-->
                 <md-table-container>
                     <table md-table
@@ -133,7 +138,7 @@
                                md-order="queryAkcije.order" md-on-reorder="logOrder">
                         <tr md-row>
                             <!--<th md-column>check</th>-->
-                            <th md-column="">naziv akcije</th>
+                            <th md-column=""><span translate="ACTION.NAME"> Naziv</span></th>
                         </tr>
                         </thead>
                         <tbody md-body>
@@ -156,7 +161,7 @@
                                      md-on-paginate="paginationAkcije"></md-table-pagination>
 
             </md-tab>
-            <md-tab label="korisnici">
+            <md-tab label="{{'ROLE.USERS' | translate}}">
                 <md-table-container>
                     <table md-table
                            md-row-select="true"
@@ -167,10 +172,10 @@
                                md-order="queryKorisnici.order" md-on-reorder="logOrder">
                         <tr md-row>
                             <!--<th md-column>check</th>-->
-                            <th md-column="">username</th>
-                            <th md-column="">ime</th>
-                            <th md-column="">prezime</th>
-                            <th md-column="">enabled</th>
+                            <th md-column=""><span translate="USER.USERNAME"> Username</span></th>
+                            <th md-column=""><span translate="USER.FNAME"> Ime</span></th>
+                            <th md-column=""><span translate="USER.LNAME"> Prezime</span></th>
+                            <th md-column=""><span translate="USER.ENABLED"> Enabled</span></th>
                         </tr>
                         </thead>
                         <tbody md-body>
