validacija, jsonignore i scope jedinstven

--- a/src/main/resources/static/js/app/admin/views/administracijaKorisnika.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaKorisnika.html
@@ -81,6 +81,7 @@
                                         style="fill: black">
                             </ng-md-icon>
                         </md-button>
+                        <md-button ng-click="ban(item)">Ban</md-button>
                         <!--<md-button class="md-icon-button">-->
                             <!--<md-tooltip>Edit</md-tooltip>-->
                             <!--<ng-md-icon icon="edit"-->
